<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_ros_samples</name>
  <version>1.7.0</version>
  <description>
    Samples using ROS on Choreonoid
  </description>
  <maintainer email="s.nakaoka@gmail.com">Shin'ichiro Nakaoka</maintainer>
  <license>MIT</license>
  <author email="s.nakaoka@gmail.com">Shin'ichiro Nakaoka</author>
  <url type="website">http://choreonoid.org</url>
  <url type="repository">https://choreonoid.org/git/rosplugin.git</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros_plugin</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
