choreonoid_add_simple_controller(ROSTankController ROSTankController.cpp)
target_link_libraries(ROSTankController ${catkin_LIBRARIES})

choreonoid_add_simple_controller(JoyTopicSubscriberController JoyTopicSubscriberController.cpp)
target_link_libraries(JoyTopicSubscriberController ${catkin_LIBRARIES})
